fix: added meta to index.html for social card sharing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <link rel="icon" type="image/png" href="src/assets/favicons/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Moonlight Grant</title>
+    <meta name="description" content="Get up to $1,000 to support your Moonlight Gig" />
+    <meta property="og:title" content="Moonlight Grant" />
+    <meta property="og:description" content="Get up to $1,000 to support your Moonlight Gig" />
+    <meta property="og:image" content="/images/page-images/moonlight-social-image.png" />
+    <meta name="twitter:title" content="Moonlight Grant" />
+    <meta name="twitter:description" content="Get up to $1,000 to support your Moonlight Gig" />
+    <meta name="twitter:image" content="/images/page-images/moonlight-social-image.png" />
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
     <div id="app"></div>
