build: version 1.0 of the device tracker, user auth handled

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="src/assets/favicons/favicon.svg" />
     <link rel="icon" type="image/png" href="src/assets/favicons/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Moonlight Grant</title>
-    <meta name="description" content="Get up to $1,000 to support your Moonlight Gig" />
-    <meta property="og:title" content="Moonlight Grant" />
-    <meta property="og:description" content="Get up to $1,000 to support your Moonlight Gig" />
+    <title>Device Tracker</title>
+    <meta name="description" content="A tracker for all Vincere Devices" />
+    <meta property="og:title" content="Device Tracker" />
+    <meta property="og:description" content="A tracker for all Vincere Devices" />
     <meta property="og:image" content="/images/page-images/moonlight-social-image.png" />
-    <meta name="twitter:title" content="Moonlight Grant" />
-    <meta name="twitter:description" content="Get up to $1,000 to support your Moonlight Gig" />
+    <meta name="twitter:title" content="Device Tracker" />
+    <meta name="twitter:description" content="A tracker for all Vincere Devices" />
     <meta name="twitter:image" content="/images/page-images/moonlight-social-image.png" />
     <meta name="twitter:card" content="summary_large_image" />
   </head>
